// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test cases for rule viewer rule viewer test cases 1`] = `
<div>
  <div
    class="bp3-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp3-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--background-grey100"
      >
        <div
          class="StyledProps--font StyledProps--main ruleViewerContainer StyledProps--border StyledProps--border-top StyledProps--padding-top-small StyledProps--padding-bottom-small StyledProps--margin-left-large StyledProps--margin-right-large"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main ruleViewContainer StyledProps--padding-top-small StyledProps--padding-bottom-small"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi"
            >
              Common &gt; Product
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi"
            >
              IN
            </p>
            <p
              class="StyledProps--font StyledProps--main pillRadius StyledProps--border StyledProps--background-grey200 StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--font-variation-tiny"
            >
              a
            </p>
            <p
              class="StyledProps--font StyledProps--main pillRadius StyledProps--border StyledProps--background-grey200 StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--font-variation-tiny"
            >
              b
            </p>
            <p
              class="StyledProps--font StyledProps--main pillRadius StyledProps--border StyledProps--background-grey200 StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--font-variation-tiny"
            >
              +1
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi"
            >
              ce.common.and
            </p>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main ruleViewContainer StyledProps--padding-top-small StyledProps--padding-bottom-small"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi"
            >
              Common &gt; Product
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi"
            >
              IN
            </p>
            <p
              class="StyledProps--font StyledProps--main pillRadius StyledProps--border StyledProps--background-grey200 StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--font-variation-tiny"
            >
              d
            </p>
            <p
              class="StyledProps--font StyledProps--main pillRadius StyledProps--border StyledProps--background-grey200 StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--font-variation-tiny"
            >
              e
            </p>
            <p
              class="StyledProps--font StyledProps--main pillRadius StyledProps--border StyledProps--background-grey200 StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--font-variation-tiny"
            >
              +1
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main orOperator StyledProps--background-grey100 StyledProps--font-variation-small-semi StyledProps--padding-small"
          >
            ce.common.or
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main ruleViewerContainer StyledProps--border StyledProps--border-top StyledProps--padding-top-small StyledProps--padding-bottom-small StyledProps--margin-left-large StyledProps--margin-right-large"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main ruleViewContainer StyledProps--padding-top-small StyledProps--padding-bottom-small"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi"
            >
              Common &gt; Product
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi"
            >
              IN
            </p>
            <p
              class="StyledProps--font StyledProps--main pillRadius StyledProps--border StyledProps--background-grey200 StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--font-variation-tiny"
            >
              g
            </p>
            <p
              class="StyledProps--font StyledProps--main pillRadius StyledProps--border StyledProps--background-grey200 StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--font-variation-tiny"
            >
              h
            </p>
            <p
              class="StyledProps--font StyledProps--main pillRadius StyledProps--border StyledProps--background-grey200 StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--font-variation-tiny"
            >
              +1
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test cases for rule viewer rule viewer test cases, should not show if field is not defined 1`] = `
<div>
  <div
    class="bp3-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp3-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--background-grey100"
      >
        <div
          class="StyledProps--font StyledProps--main ruleViewerContainer StyledProps--border StyledProps--border-top StyledProps--padding-top-small StyledProps--padding-bottom-small StyledProps--margin-left-large StyledProps--margin-right-large"
        />
      </div>
    </div>
  </div>
</div>
`;
